--- a/src/dashboard/views/commands.ejs
+++ b/src/dashboard/views/commands.ejs
@@ -10,7 +10,7 @@
     
     <div class="container">
       <h3 class="display-3">Comandos</h3>
-      <p class="lead">Descruba todos os comandos do Hyouka!</p>
+      <p class="lead">Todos os Comandos.</p>
         <div class="row">
             <div class="col-md-3 mb-2">
               <h1>Categorias</h1>
