hested with heroku

--- a/src/dashboard/views/components/navbar.ejs
+++ b/src/dashboard/views/components/navbar.ejs
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/invite">Invite</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/matheuuus/hyouka/">Github</a>
+          <a class="nav-link" href="https://github.com/queendeveloperbr/Sky">Github</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto mr-2">
