--- a/src/dashboard/views/components/sidebar.ejs
+++ b/src/dashboard/views/components/sidebar.ejs
@@ -15,7 +15,7 @@
       </div>
       <% } else { %>
         <div class="ellipsis guild-blue guild-itens">
-            <a href="https://hyouka-web.glitch.me/dashboard/guilds/<%=guild.id%>" class="guild-acr pt-3" style="font-size: 12px;" title="<%=guild.name%>" ><%= guild.name.replace(/\w+/g, name => name[0]).replace(/\s/g, '') %></a>
+            <a href="https://skydiscord-web.herokuapp.com/dashboard/guilds/<%=guild.id%>" class="guild-acr pt-3" style="font-size: 12px;" title="<%=guild.name%>" ><%= guild.name.replace(/\w+/g, name => name[0]).replace(/\s/g, '') %></a>
         </div>
       <%}%>
   <%});%>
