--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -33,7 +33,7 @@
         <%- include ('../components/navbar.ejs') %>
   
         <div class="jumbotron text-center bg-transparent">
-          <h1 class="display-3">Hyouka Dashboard</h1>
+          <h1 class="display-3">Sky Dashboard</h1>
           <hr>
           <p class="lead">Escolha um servidor</p>
           
