--- a/src/dashboard/views/index.ejs
+++ b/src/dashboard/views/index.ejs
@@ -12,6 +12,7 @@
         <!-- <img class="round logo-avatar" src="https://cdn.glitch.com/3e9304e0-23b6-4d34-8ca4-92f7ba536183%2Fhyoukakk.jpg?v=1602441076647" alt="Icon"> -->
         <h1 class="display-5 heading--title">Sky</h1>
         <p class="heading--subtitle">Sky Discord <strong>BOT</strong> <br> comandos de diversão, moderação e mais!</p>
+        <p class="heading--subtitle">Dashboard: Matheuuus#7083, Bot: QueeN#3306</p>
         <a class="btn btn-primary btn-lg mt-1" href="/invite" target="_blank" role="button">+ Me adicione</a>
         <a class="btn btn-secondary btn-lg mt-1" href="/dashboard" role="button">Dashboard</a>
     </div>
