--- a/src/dashboard/views/components/navbar.ejs
+++ b/src/dashboard/views/components/navbar.ejs
@@ -7,6 +7,7 @@
 </div>
 <nav class="navbar navbar-expand-lg bg-transparent navbar-dark">
     <a class="navbar-brand mr-1 pb-0" href="/">
+      Inicio
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
