--- a/src/dashboard/public/css/main.css
+++ b/src/dashboard/public/css/main.css
@@ -1,8 +1,8 @@
 /*#11F27D*/
 :root{
-  --primary: #11F27D;
-  --primaryShadow: #0EC466;
-  --primaryActive: #0BA153;
+  --primary: #56006b;
+  --primaryShadow: #7b0ec4;
+  --primaryActive: #830ba1;
   --discordPrimary: #7289da;
   --backgroundColor: #313338;
 }
