--- a/src/dashboard/views/index.ejs
+++ b/src/dashboard/views/index.ejs
@@ -9,12 +9,10 @@
         <%- include('./components/navbar.ejs') %>
 
     <div class="heading text-center pt-3">
-        <!-- <img class="round logo-avatar" src="https://cdn.glitch.com/3e9304e0-23b6-4d34-8ca4-92f7ba536183%2Fhyoukakk.jpg?v=1602441076647" alt="Icon"> -->
+         <img class="round logo-avatar" src="https://media.discordapp.net/attachments/683344477871538229/777344047404286022/LogoSky.png?width=468&height=468" alt="Icon">
         <h1 class="display-5 heading--title">Sky</h1>
-        <p class="heading--subtitle">Sky Discord <strong>BOT</strong> <br> comandos de diversão, moderação e mais!</p>
-        <p class="heading--subtitle">Dashboard: Matheuuus#7083, Bot: QueeN#3306</p>
-        <a class="btn btn-primary btn-lg mt-1" href="/invite" target="_blank" role="button">+ Me adicione</a>
-        <a class="btn btn-secondary btn-lg mt-1" href="/dashboard" role="button">Dashboard</a>
+        <p class="heading--subtitle"><strong>Sky é um bot focado em diversão e comandos de categoria diversos</strong>, possui também <br> alguns comandos de moderação e foi feito pensado para você!</p>
+        <p class="heading--textareakk">Dashboard: Matheuuus#7083, Bot: QueeN#3306</p>
     </div>
     
 
