--- a/src/dashboard/public/css/main.css
+++ b/src/dashboard/public/css/main.css
@@ -22,7 +22,19 @@
 
 .heading--subtitle {
   color: #fff;
-  font-size: 16px;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
+}
+
+.heading--textareakk {
+  color: #fff;
+  font-size: 25px;
+  font-family: 'Lato', sans-serif;
+}
+
+.heading--textareakk:hover {
+  color: #d8d8d8;
+  font-size: 27px;
   font-family: 'Lato', sans-serif;
 }
 
@@ -97,6 +109,11 @@
 .logo-avatar{
   box-shadow: 0 1rem 3rem rgba(0,0,0,.5);
     width: 300px;
+}
+
+.logo-avatar:hover {
+  box-shadow: 0 1rem 3rem rgba(100, 100, 100, 0.5);
+    width: 315px;
 }
 
 
