--- a/src/dashboard/views/components/header.ejs
+++ b/src/dashboard/views/components/header.ejs
@@ -3,6 +3,14 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/utils.css">
+    <link rel="stylesheet" type="text/css" href="/css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="/css/global.css">
+
+    <meta name="description" content="Para aquele dono de servidor exigente!" />
+    <meta itemprop="thumbnailUrl" content="https://media.discordapp.net/attachments/683344477871538229/777344047404286022/LogoSky.png" />
+    <meta itemprop="image" content="https://media.discordapp.net/attachments/683344477871538229/777344047404286022/LogoSky.png" />
+
+    <link href="https://media.discordapp.net/attachments/683344477871538229/777344047404286022/LogoSky.png" rel="icon" type="image/x-icon" />
 
     <title>Sky | Discord Bot</title>
 
