--- a/src/dashboard/views/components/navbar.ejs
+++ b/src/dashboard/views/components/navbar.ejs
@@ -22,10 +22,7 @@
           <a class="nav-link" href="/dashboard">Dashboard</a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="/invite">Invite</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/queendeveloperbr/Sky">Github</a>
+          <a class="nav-link" href="/invite">Convidar</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto mr-2">
