--- a/src/dashboard/views/index.ejs
+++ b/src/dashboard/views/index.ejs
@@ -8,13 +8,60 @@
     
         <%- include('./components/navbar.ejs') %>
 
-    <div class="heading text-center pt-3">
-         <img class="round logo-avatar" src="https://media.discordapp.net/attachments/683344477871538229/777344047404286022/LogoSky.png?width=468&height=468" alt="Icon">
-        <h1 class="display-5 heading--title">Sky</h1>
-        <p class="heading--subtitle"><strong>Sky é um bot focado em diversão e comandos de categoria diversos</strong>, possui também <br> alguns comandos de moderação e foi feito pensado para você!</p>
-        <p class="heading--textareakk">Dashboard: Matheuuus#7083, Bot: QueeN#3306</p>
-    </div>
+        <section id="home"><!-- Início seção home -->
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 d-flex"><!-- Textos da seção -->
+                <div class="align-self-center">
+                  <h1 class="display-4"><strong>Sky</strong></h1>
+                  <p>
+                    A qualidade vai te surpreender!
+                  </p>
+                </div>
+              </div><!--/fim textos da seção -->
+              <div class="col-md-6 d-none d-md-block">
+                <img src="/assets/saiba.png" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </section><!--/fim seção home -->
     
-
+        <section class="caixa"><!--/Início seção saiba -->
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 d-flex">
+                <div class="align-self-center">
+                  <h2>Transforme seu discord</h2>
+                  <p>
+                    Com o sky, você faz seu discord ganhar vida!
+                  </p>
+                  <a href="/comandos" class="btn btn-primary">Veja mais</a>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <img src="https://media.discordapp.net/attachments/683344477871538229/777356467022856212/unknown.png" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </section><!--/FIM seção saiba -->
+  
+        <section class="caixa2"><!--/Início seção database -->
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 d-flex">
+                <div class="align-self-center">
+                  <h2>Suas informações estão seguras!</h2>
+                  <p>
+                    Zadd utiliza um dos melhores cloud databases do mercado!
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <img src="/assets/mongodb.png" class="img-fluid" class="pulse">
+              </div>
+            </div>
+          </div>
+        </section><!--/FIM seção database -->
+  
   </body>
 </html>
