--- a/src/dashboard/views/index.ejs
+++ b/src/dashboard/views/index.ejs
@@ -15,7 +15,8 @@
                 <div class="align-self-center">
                   <h1 class="display-4"><strong>Sky</strong></h1>
                   <p>
-                    A qualidade vai te surpreender!
+                    <strong>A qualidade vai te surpreender!</strong>
+                    Made by: Matheuuus#7083 & QueeN#3306
                   </p>
                 </div>
               </div><!--/fim textos da seção -->
