--- a/src/dashboard/views/index.ejs
+++ b/src/dashboard/views/index.ejs
@@ -16,7 +16,7 @@
                   <h1 class="display-4"><strong>Sky</strong></h1>
                   <p>
                     <strong>A qualidade vai te surpreender!</strong>
-                    Made by: Matheuuus#7083 & QueeN#3306
+                   <br> Made by: Matheuuus#7083 & QueeN#3306
                   </p>
                 </div>
               </div><!--/fim textos da seção -->
