--- a/src/dashboard/views/index.ejs
+++ b/src/dashboard/views/index.ejs
@@ -53,7 +53,7 @@
                 <div class="align-self-center">
                   <h2>Suas informações estão seguras!</h2>
                   <p>
-                    Zadd utiliza um dos melhores cloud databases do mercado!
+                    Sky utiliza um dos melhores cloud databases do mercado!
                   </p>
                 </div>
               </div>
