--- a/src/dashboard/views/404.ejs
+++ b/src/dashboard/views/404.ejs
@@ -14,18 +14,8 @@
                 z-index: 2;
                 height: 250px;
                 letter-spacing: 10px;'>
-        404
+        Error 404: Not Found
       </h1>
       <br>
-      <a class='btn btn-primary' href='/' style="position: relative;
-        display: inline-block;
-        width: 358px;
-        padding: 5px;
-        z-index: 5;
-        font-size: 25px;
-        margin:0 auto;
-        margin-right: 10px;"
-        >Volta ao inicio</a>
-    </div>
       
 </body>
