--- a/src/dashboard/views/commands.ejs
+++ b/src/dashboard/views/commands.ejs
@@ -14,43 +14,37 @@
             <div class="col-md-9" style="margin-left: 10%; margin-top: 5%;">
               <div class="row">
                 <div class="col-12 pr-0 mb-2">
-                    <div class="form-group">
-                        <input autocomplete="on" class="form-control form-control-lg cmd-input" id="search-input" type="text" placeholder="Digite aqui o nome do comando buscado.">
-                    </div>
                 </div>
                 <div class="col-12 pr-0">
                         <div id="categorias">
+                          <table class="table table-dark">
+                            <thead>
+                              <tr>
+                                <th scope="col">Nome</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Aliases</th>
+                                <th scope="col">Usage</th>
+                                <th scope="col">Example</th>
+                              </tr>
+                            </thead>
                           <%comandos.forEach((comando) => {%>
-                            <div class="card mb-2  border-secondary rounded command <%=comando.category%>"><!-- Tem que colocar o nome da categoria pra o evento de mostra categoria -->
-                              <div class="<%=comando.name%>Cmd card-header" data-toggle="collapse" data-target="#<%=comando.name%>" aria-expanded="true" aria-controls="<%=comando.name%>" style="background-color: #212529;padding: 20px;"> <!-- Esses arias são do aside do bootstrap, faz de outro jeito pra não ficar igual o meu -->
-                                <%=comando.name%> 
-                                <span class="float-right">
-                                  <i class="icon">
-                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                      <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-                                    </svg>
-                                  </i>
-                                </span>
-                              </div>
-                          
-                              <div id="<%=comando.name%>" class="collapse">
-                                <div class="card-body" style="background-color: #23142b;">
-                                  <p><%=comando.description%></p>
+                              <tbody>
+                                <tr>
+                                  <td><%=comando.name%></td>
+                                  <td><%=comando.description%></td>
                                   <%if(comando.aliases) {%>
-                                  <span class="bold">Sinônimos: </span><span><%=comando.aliases.join(', ')%></span>
-                                  <%}%>
-                                  
-                                  <br>
-                                  <span class="bold">Modo de uso: </span> <span><%=comando.usage%></span>
-                                  <br>
-                                  <%if(comando.example) {%>
-                                   <span class="bold">Exemplo: </span> <span><%=comando.example%></span>
-                                  <%}%>
-                                </div>
-                              </div>
-                            </div>
+                                    <td><%=comando.aliases.join(', ')%></td>
+                                    <%}%>
+                                    <td><%=comando.usage%></td>
+                                    <%if(comando.example) {%> 
+                                      <td><%=comando.example%></td>
+                                    <%}else {%>
+                                      <td>Nada</td>
+                                    <%}%>
+                                </tr>
+                              </tbody>
                           <%})%>
-                          
+                        </table>
                           <p id="notfound" style="display: none;">Não foi encontrado o comando inserido</p>
                         
                         </div>
