--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -15,10 +15,12 @@
           <hr>
           <% guilds.forEach((guild) => { %>
             <% if (guild.icon) { %>
-            <div class="text-center guild-items mt-2">
-              <a href="/dashboard/guilds/<%=guild.id%>">
-                <img class="guild-image user-avatar" src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=2048" alt="<%=guild.name%>" title="<%=guild.name%>">
-              </a>
+            <div class="card mb-3">
+              <img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=2048" class="card-img-top" alt="<%=guild.name%>">
+              <div class="card-body">
+                <h5 class="card-title"><%=guild.name%></h5>
+                <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>">Editar</a></p>
+              </div>
             </div>
             <% } else { %>
               <div class="ellipsis guild-blue guild-itens">
