--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -14,7 +14,7 @@
           <h1 class="display-3">Escolha um servidor</h1>
           <% guilds.forEach((guild) => { %>
             <% if (guild.icon) { %>
-            <div class="card mb-3">
+            <div class="card mb-3" style="color: #292929;">
               <div class="card-body" style="color: #292929;">
                 <h5 class="card-title" style="color: black;"><%=guild.name%></h5>
                 <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
