--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -15,8 +15,8 @@
           <% guilds.forEach((guild) => { %>
             <% if (guild.icon) { %>
             <div class="card mb-3" style="color: #292929;">
-              <div class="card-body" style="color: #292929;">
-                <h5 class="card-title" style="color: black;"><%=guild.name%></h5>
+              <div class="card-body" style="background: #292929;">
+                <h5 class="card-title" style="color: black;"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=512"> <br> <%=guild.name%></h5>
                 <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
               </div>
             </div>
