--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -14,8 +14,8 @@
           <h1 class="display-3">Escolha um servidor</h1>
           <% guilds.forEach((guild) => { %>
             <% if (guild.icon) { %>
-            <div class="card mb-3" style="color: #292929;">
-              <div class="card-body" style="background: #292929;">
+            <div class="card mb-3">
+              <div class="card-body" style="background: #3d3c3c;">
                 <h5 class="card-title" style="color: black;"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=300"> <br> <%=guild.name%></h5>
                 <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
               </div>
