--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -14,9 +14,9 @@
           <h1 class="display-3">Escolha um servidor</h1>
           <% guilds.forEach((guild) => { %>
             <% if (guild.icon) { %>
-            <div class="card mb-3">
-              <div class="card-body" style="background: #393b41fd;">
-                <h5 class="card-title" style="color: black;"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=350"> <br> <%=guild.name%></h5>
+            <div class="card text-white bg-dark mb-3">
+              <div class="card-body">
+                <h5 class="card-title"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=350"> <br> <%=guild.name%></h5>
                 <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
               </div>
             </div>
