--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -16,7 +16,7 @@
             <% if (guild.icon) { %>
             <div class="card text-white bg-dark mb-3">
               <div class="card-body">
-                <h5 class="card-title"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=350"> <br> <%=guild.name%></h5>
+                <h5 class="card-title"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=512" width="300"> <br> <%=guild.name%></h5>
                 <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
               </div>
             </div>
