--- a/src/dashboard/views/dashboard/guilds.ejs
+++ b/src/dashboard/views/dashboard/guilds.ejs
@@ -11,7 +11,7 @@
         <header class="text-center py-4 px-2" style="background-color: #2c2e33;">     
           <h4 class="pt-2"><%=guild.name%></h4>
         </header>
-        <a href="/dashboard">Voltar</a>
+        <a href="/dashboard" class="pt-2" style="margin-left: 3px;">Voltar</a>
       </div>
       
       <div id="page-content-wrapper" style="width: 100%;">
