guilds e dashboard changes

--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -17,7 +17,7 @@
             <div class="card text-white bg-dark mb-3">
               <div class="card-body">
                 <h5 class="card-title"><img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png?size=512" width="70"> <br> <%=guild.name%></h5>
-                <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
+                <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;"><button style="border-radius: 500px;">Editar</button></a></p>
               </div>
             </div>
             <% } else { %>
