--- a/src/dashboard/views/dashboard/dashboard.ejs
+++ b/src/dashboard/views/dashboard/dashboard.ejs
@@ -24,7 +24,7 @@
               <div class="card text-white bg-dark mb-3">
                 <div class="card-body">
                   <h5 class="card-title"><%=guild.name%></h5>
-                  <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;">Editar</a></p>
+                  <p class="card-text"><a href="/dashboard/guilds/<%=guild.id%>" style="color: #310058;"><button class="btn btn-primary" style="border-radius: 500px;">Editar</button></a></p>
                 </div>
               </div>
             <%}%>
